--- a/RFM.ipynb
+++ b/RFM.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 5:Customer segmentation RFM analysis\n",
+    "#### Customer segmentation RFM analysis\n",
     "#### Submitted by Apurva Nikade"
    ]
   },
