--- a/RFM.ipynb
+++ b/RFM.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "#### Customer segmentation RFM analysis\n",
-    "#### Submitted by Apurva Nikade"
+    "#### Serhat Enes Özdemir"
    ]
   },
   {
