--- a/RFM.ipynb
+++ b/RFM.ipynb
@@ -459,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q5.a ) Calculate RFM value of each customer\n",
+    "### Calculate RFM value of each customer\n",
     "#### Assumption: In this final dataset , I have removed all the transaction with negative quantity value"
    ]
   },
@@ -789,7 +789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q5.c)Find optimal number of segments usig dendograms and elbow methods"
+    "### Find optimal number of segments usig dendograms and elbow methods"
    ]
   },
   {
