--- a/RFM.ipynb
+++ b/RFM.ipynb
@@ -638,7 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q35.b) Fing top 10 customers based on frequency and monetary values\n",
+    "### Fing top 10 customers based on frequency and monetary values\n",
     "#### Sorting first on frequency and then on Monetary value"
    ]
   },
